--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </nav>
 
     <section class="hero">
+        <p>Donde<br> tu marca<br> florece.</p>
         <img class="hero-image" src="./assets/images/fondo1.png" alt="Imagen Principal">
         <div class="hero-overlay"></div>
-        <p>Donde tu marca florece.</p>
     </section>
 <section id="servicios" class="servicios">
     <h2>Te presento mis servicios</h2>
@@ -93,7 +93,7 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
 
     <section id="contacto" class="ubicacion-formulario">
     <div class="ubicacion">
-        <h2>Ubicación</h2>
+        <h2>UBICACIÓN</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31714.1838788439!2d-58.4332826976833!3d-34.6153162994878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacec5c759a3%3A0xa00a5164c6c327a2!2sBuenos%20Aires!5e0!3m2!1ses-419!2sar!4v1716109281909!5m2!1ses-419!2sar" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
@@ -120,6 +120,7 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
 
          <div class="redes-sociales">
             <a href="#" target="_blank" class="social-button instagram"><i class="fab fa-instagram"></i></a>
+            <span class="social-name">Instagram</span>
             <a href="#" target="_blank" class="social-button facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="mailto:tu@email.com" class="social-button email"><i class="fas fa-envelope"></i></a>
             <a href="#" target="_blank" class="social-button tiktok"><i class="fab fa-tiktok"></i></a>
