--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
             </div>
     </div>
 </section>
+<footer>
+    <div class="footer-content">
+        <p><a href="#">Términos y Condiciones</a> | <a href="#">Política de Privacidad</a></p>
+        <p>&copy; 2025 Nombre de tu Página. Todos los derechos reservados.</p>
+    </div>
+</footer>
 
 </body>
 </html>
