--- a/index.html
+++ b/index.html
@@ -122,8 +122,11 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
             <a href="#" target="_blank" class="social-button instagram"><i class="fab fa-instagram"></i></a>
             <span class="social-name">Instagram</span>
             <a href="#" target="_blank" class="social-button facebook"><i class="fab fa-facebook-f"></i></a>
+            <span class="social-name">Facebook</span>
             <a href="mailto:tu@email.com" class="social-button email"><i class="fas fa-envelope"></i></a>
+            <span class="social-name">Email</span>
             <a href="#" target="_blank" class="social-button tiktok"><i class="fab fa-tiktok"></i></a>
+            <span class="social-name">TikTok</span>
             </div>
     </div>
 </section>
