--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
         </div>
 
          <div class="redes-sociales">
-            <a href="#" target="_blank" class="social-button instagram"><i class="fab fa-instagram"></i></a>
-            <span class="social-name">Instagram</span>
-            <a href="#" target="_blank" class="social-button facebook"><i class="fab fa-facebook-f"></i></a>
-            <span class="social-name">Facebook</span>
-            <a href="mailto:tu@email.com" class="social-button email"><i class="fas fa-envelope"></i></a>
-            <span class="social-name">Email</span>
-            <a href="#" target="_blank" class="social-button tiktok"><i class="fab fa-tiktok"></i></a>
-            <span class="social-name">TikTok</span>
+            <a href="https://www.instagram.com/digitalbloomkt/" target="_blank" class="social-button instagram"><i class="fab fa-instagram"></i></a>
+            <span  class="social-name"><a href="https://www.instagram.com/digitalbloomkt/">Instagram</a></span>
+            <a href="https://www.facebook.com/share/16BipM7eHb/" target="_blank" class="social-button facebook"><i class="fab fa-facebook-f"></i></a>
+            <span class="social-name"><a href="https://www.facebook.com/share/16BipM7eHb/">Facebook</a></span>
+            <a href="mailto:brendadujovich@gmail.com" class="social-button email"><i class="fas fa-envelope"></i></a>
+            <span class="social-name"><a href="mailto:brendadujovich@gmail.com">Email</a></span>
+            <a href="https://www.tiktok.com/@digitalbloomkt?lang=es-419" target="_blank" class="social-button tiktok"><i class="fab fa-tiktok"></i></a>
+            <span class="social-name"><a href="https://www.tiktok.com/@digitalbloomkt?lang=es-419">TikTok</a></span>
             </div>
     </div>
 </section>
