--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Mi Página Web</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+
 </head>
 <body>
 
@@ -82,14 +83,32 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
 
 <section id="certificados" class="certificados">
     <h2>MIS CERTIFICADOS</h2>
-    <div class="certificados-container">
-        <div class="certificado-circulo">Certificado Advisors</div>
-        <div class="certificado-circulo">Certificado<br> CM y <br>Publicidad</div>
-        <div class="certificado-circulo">Certificado Copywriting</div>
-        <div class="certificado-circulo">Certificado Fotoproducto</div>
-        <div class="certificado-circulo">Certificado Growht Marketing</div>
+    <div class="certificado-bg-extra-1"></div>
+    <div class="certificado-bg-extra-2"></div>
+
+    <div class="carousel-viewport"> 
+        <div class="certificados-container carousel-track"> 
+            <div class="certificado-circulo">Certificado Advisors</div>
+            <div class="certificado-circulo">Certificado<br> CM y <br>Publicidad</div>
+            <div class="certificado-circulo">Certificado Copywriting</div>
+            <div class="certificado-circulo">Certificado Fotoproducto</div>
+            <div class="certificado-circulo">Certificado Growth Marketing</div>
+            <div class="certificado-circulo">Certificado SEO Básico</div>
+            <div class="certificado-circulo">Certificado Google Ads</div>
+            <div class="certificado-circulo">Certificado Facebook Ads</div>
+            <div class="certificado-circulo">Certificado Analítica Web</div>
+            <div class="certificado-circulo">Certificado Marca Personal</div>
+            <div class="certificado-circulo">Certificado SEO Básico</div>
+            <div class="certificado-circulo">Certificado Google Ads</div>
+            <div class="certificado-circulo">Certificado Facebook Ads</div>
+            <div class="certificado-circulo">Certificado Analítica Web</div>
+            <div class="certificado-circulo">Certificado Marca Personal</div>
+        </div>
     </div>
-</section>
+    <button class="carousel-prev-btn"><i class="fas fa-chevron-left"></i></button>
+    <button class="carousel-next-btn"><i class="fas fa-chevron-right"></i></button>
+    
+    <div class="carousel-dots"></div> </section>
 
     <section id="contacto" class="ubicacion-formulario">
     <div class="ubicacion">
@@ -136,6 +155,6 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
         <p>&copy; 2025 Nombre de tu Página. Todos los derechos reservados.</p>
     </div>
 </footer>
-
+<script type="text/javascript" src="./assets/js/main.js"></script>
 </body>
 </html>
