--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p class="header-subtitulo">Agencia de Marketing</p>
         </div>
     </header>
-
+<section class="nav-menu-section">
     <nav class="menu">
         <a href="#servicios" class="menu-item">Servicios</a>
         <a href="#quienes-somos" class="menu-item">Quiénes Somos</a>
@@ -28,7 +28,7 @@
         <a href="#certificados" class="menu-item">Certificados</a>
         <a href="#contacto" class="menu-item">Contacto</a>
     </nav>
-
+</section>
     <section class="hero">
         <p>Donde<br> tu marca<br> florece.</p>
         <img class="hero-image" src="./assets/images/fondo1.png" alt="Imagen Principal">
@@ -74,13 +74,13 @@ espacio también es para vos.<br><br>
 Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
     </section>
 
-    <section id="contenido-gratuito" class="contenido-gratuito">
-        <img src="./assets/images/descontenido.png" alt="Contenido Gratuito">
-        <div class="contenido-texto">
+<section id="contenido-gratuito" class="contenido-gratuito">
+    <img src="./assets/images/descontenido.png" alt="Contenido Gratuito">
+    <div class="contenido-texto-y-boton-wrapper"> <div class="contenido-texto">
             <h3>DESCARGA MI <br>CONTENIDO GRATUITO</h3>
         </div>
         <a id="descarga-aqui-btn" class="boton-descargar">Aquí</a>
-    </section>
+    </div> </section>
     <div id="contenido-gratuito-modal" class="modal-gratuito-general">
     <div class="modal-gratuito-contenido">
         <span class="cerrar-modal-gratuito">&times;</span>
@@ -130,6 +130,16 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
         </form>
     </div>
 </div>
+<section id="reseñas-section" class="reseñas-section">
+    <h2 class="reseña-title">Algunas reseñas de nuestros clientes</h2>
+         <div class="reseñas-container">
+                <div class="reseñas-card" ><img src="assets/images/res-img.jpg" alt="images-reseñas"></div>
+                <div class="reseñas-card" ><img src="assets/images/res-img2.jpg" alt="images-reseñas2"></div>
+                <div class="reseñas-card" ><img src="assets/images/res-img3.jpg" alt="images-reseña3"></div>
+                <div class="reseñas-card" ><img src="assets/images/res-img4.jpg" alt="images-reseña4"></div>
+                <div class="reseñas-card" ><a href="https://www.instagram.com/stories/highlights/17844320421113426/" class="card-link" aria-label="Ver más reseñas de clientes" ></a><p class="texto-reseñas">Te invito a ver<br> mas reseñas acá...</p></div>
+    </div>
+</section>
 
 <section id="certificados" class="certificados">
     <h2>MIS CERTIFICADOS</h2>
