--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
 </section>
     <section class="hero">
-        <p>Donde<br> tu marca<br> florece.</p>
+        <p>Donde tu marca florece.</p>
         <img class="hero-image" src="./assets/images/fondo1.png" alt="Imagen Principal">
         <div class="hero-overlay"></div>
     </section>
@@ -138,7 +138,12 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
                 <div class="reseñas-card" ><img src="assets/images/res-img3.jpg" alt="images-reseña3"></div>
                 <div class="reseñas-card" ><img src="assets/images/res-img4.jpg" alt="images-reseña4"></div>
                 <div class="reseñas-card" ><a href="https://www.instagram.com/stories/highlights/17844320421113426/" class="card-link" aria-label="Ver más reseñas de clientes" ></a><p class="texto-reseñas">Te invito a ver<br> mas reseñas acá...</p></div>
-    </div>
+         </div>
+         <div class="img-container-res">
+            <div class="i1"><img src="assets/images/logo2.png" alt="logo-img-1"></div>
+            <div class="i2"><img src="assets/images/logo2.png" alt="logo-img-2"></div>
+            <div class="i3"><img src="assets/images/logo2.png" alt="logo-img-3"></div>
+         </div>
 </section>
 
 <section id="certificados" class="certificados">
