--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
                 <textarea id="consulta" name="consulta" rows="5" required></textarea>
 
                 <button type="submit">Enviar Consulta</button>
-                <a href="https://wa.me/TUNUMEROTELEFONO?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." 
+                <a href="https://wa.me/+5492213576210?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." 
                    target="_blank" 
                    rel="noopener noreferrer"
                    class="whatsapp-button">
