--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
     <section id="contacto" class="ubicacion-formulario">
     <div class="ubicacion">
         <h2>UBICACIÓN</h2>
-        <iframe src="https://maps.app.goo.gl/69TtQeqQfdBetxy49" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d816.398828494716!2d-57.51373188346376!3d-35.066855551653674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2654b9337cd21%3A0x7288ba3b4217fe2!2sDigitalBlooMkt!5e0!3m2!1ses-419!2sar!4v1753812618718!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
     <div class="form-redes-wrapper">
