--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
                 <label for="consulta">Consulta:</label>
                 <textarea id="consulta" name="consulta" rows="5" required></textarea>
 
-                <button type="submit">Enviar Consulta</button>
+                <button type="button" id="enviarConsultaBtn">Enviar Consulta</button> 
                 <a href="https://wa.me/+5492213576210?text=Hola,%20me%20gustaría%20saber%20más%20sobre%20sus%20servicios." 
                    target="_blank" 
                    rel="noopener noreferrer"
