--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Por eso, en DigitalBloomkt no solo hacemos redes:<br>
 📌 Creamos contenido que representa tu esencia.<br>
 📌 Acompañamos a tu marca a florecer paso a paso.<br><br>
 
-Acá vas a encontrar un equipo que te escucha, te entiende y te propone soluciones que no solo se ven lindas,<br>
+Acá vas a encontrar un equipo que te escucha, te entiende y te propone soluciones que no solo se ven lindas,
  sino que funcionan.<br><br>
 
 No importa si estás empezando o ya tenés recorrido.<br>
@@ -243,7 +243,7 @@ Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
 
     <div class="form-redes-wrapper">
         <div id="formulario-consulta" class="formulario-consulta">
-            <form>
+            <form id="contactForm">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required>
 
