--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Acá vas a encontrar un equipo que te escucha, te entiende y te propone solucion
  sino que funcionan.<br><br>
 
 No importa si estás empezando o ya tenés recorrido.<br>
-Si buscás comunicarte con intención, crecer con estrategia y sentirte acompañado en el proceso, este <br>
+Si buscás comunicarte con intención, crecer con estrategia y sentirte acompañado en el proceso, este
 espacio también es para vos.<br><br>
 
 Bienvenido a Digitalbloomkt, donde tu marca florece.</p>
